[gd_scene load_steps=9 format=3 uid="uid://b4bxog16vk7is"]

[ext_resource type="Theme" uid="uid://c3iqr2x4b48wy" path="res://Assets/Scenes/testbutton.tres" id="1_24mnh"]
[ext_resource type="Script" path="res://Assets/Scenes/main_menu.gd" id="1_gtcam"]
[ext_resource type="Texture2D" uid="uid://b3o663xyu43v" path="res://Assets/Sprites/GUI.png" id="1_ig430"]
[ext_resource type="AudioStream" uid="uid://cst0ceg8xr48v" path="res://Assets/SFX/delivery_song_bgm.mp3" id="4_kscvl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x442g"]
texture = ExtResource("1_ig430")
region_rect = Rect2(53, 68, 6, 5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nup7g"]
texture = ExtResource("1_ig430")
region_rect = Rect2(53, 68, 6, 5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rxro8"]
texture = ExtResource("1_ig430")
region_rect = Rect2(53, 68, 6, 5)

[sub_resource type="Theme" id="Theme_vdju7"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_disabled_color = Color(0, 0, 0, 1)
Button/colors/icon_focus_color = Color(0, 0, 0, 1)
Button/colors/icon_hover_color = Color(0, 0, 0, 1)
Button/colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_normal_color = Color(0, 0, 0, 1)
Button/colors/icon_pressed_color = Color(0, 0, 0, 1)
Button/constants/h_separation = 0
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 16
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource("StyleBoxTexture_x442g")
Button/styles/normal = SubResource("StyleBoxTexture_nup7g")
Button/styles/pressed = SubResource("StyleBoxTexture_rxro8")

[node name="MainMenu" type="Control" node_paths=PackedStringArray("highScoreLabel", "tutorialPanel")]
process_mode = 3
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gtcam")
highScoreLabel = NodePath("Panel/ScoreLabel")
tutorialPanel = NodePath("Panel/TutorialPanel")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -121.0
offset_right = 201.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "High Score: 9999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayNowButton" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -14.0
offset_right = 150.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_24mnh")
text = "Start"

[node name="HowToPlayButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 70.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_24mnh")
text = "Tutorial"

[node name="Exit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 157.0
offset_right = 150.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_24mnh")
text = "Quit"

[node name="TutorialPanel" type="NinePatchRect" parent="Panel"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -192.0
offset_right = 217.0
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ig430")
region_rect = Rect2(81, 97, 30, 30)

[node name="Label" type="Label" parent="Panel/TutorialPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -133.5
offset_right = 202.0
offset_bottom = -91.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Press A and D to Move"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel/TutorialPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -56.5
offset_right = 200.0
offset_bottom = -14.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Press F to take item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Panel/TutorialPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -12.5
offset_right = 194.0
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Press F again to drop the item to the desired NPC."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ExitButton" type="Button" parent="Panel/TutorialPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -93.0
offset_right = 7.0
offset_bottom = 100.0
grow_horizontal = 0
theme = SubResource("Theme_vdju7")

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_kscvl")
autoplay = true

[connection signal="pressed" from="Panel/PlayNowButton" to="." method="_on_play_now_button_pressed"]
[connection signal="pressed" from="Panel/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="Panel/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Panel/TutorialPanel/ExitButton" to="." method="_on_exit_button_pressed"]
